version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/SeccontrolCommand.rst.txt
.. vale off



:class:`SeccontrolCommand`
==========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.SeccontrolCommand(iSeccontrolCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.ISeccontrolCommand)

   Bases: :py:obj:`object`


   
   Represents a SECCONTROL command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SeccontrolCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[tuple[float]]


   
   Gets the values.
















   ..
       !! processed by numpydoc !!







.. vale on